# wavepacket-dynamics

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  install.sh  main.cpp
examples/: WavepacketDynamics  basis.yaml  basis_1D_abs.yaml  basis_1D_eigenstates.yaml  basis_1D_integrate.yaml  basis_eckhard_1D.yaml  basis_eigenstates.yaml  basis_exercise1.yaml  basis_exercise2.yaml  basis_fft.yaml  basis_integrate.yaml  basis_pes.yaml  basis_tullyA.yaml  basis_tullyA_adiabatic.yaml  basis_tullyA_diabatic.yaml
examples/TullyA/: basis_tullyA_adiabatic.yaml  basis_tullyA_diabatic.p0.50.yaml  basis_tullyA_diabatic.yaml
examples/create_movie/: frame.plt  frame_1D.plt  movie.sh  movie_1D.sh
examples/create_movie_tullyA_diabatic/: clean.sh  frame.plt  movie.sh
src/: Basis.h  Hamiltonian.h  Lanczos.h  Operators.cpp  Operators.h  Output.cpp  Output.h  Potentials.cpp  Potentials.h  PrimitiveBasis.h  PrimitiveOperators.cpp  PrimitiveOperators.h  ProductOperator.h  Wavefunction.h  yaml-helper.cpp  yaml-helper.h  yaml-parser.cpp  yaml-parser.h
